# usb-notify

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.sh  install.sh
include/: usb-notify.h
src/: CMakeLists.txt  usb-notify.c
systemd/: usbnotify.service
